# CheckClionConsistency

./: .gitignore  CMakeLists.txt  README.md
